# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: audit.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
