[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Saing Sab <saing.sab@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11"
#[target.x86_64-pc-windows-msvc]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]

#[target.x86_64-pc-windows-gnu]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]
